# django-image-assets

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  requires.txt  setup.py  tox.ini
.github/workflows/: build.yml  codecov.yml  pythonpublish.yml
image_assets/: admin.py  apps.py  defaults.py  forms.py  models.py  signals.py  validators.py
image_assets/locale/ru/LC_MESSAGES/: django.po
image_assets/migrations/: 0001_initial.py  0002_auto_20200318_1154.py  0002_models_localization.py  0004_auto_20200402_0942.py  0006_migrate_formats.py  0007_auto_20200406_1313.py  0008_auto_20200528_0725.py  0009_support_video_asset.py
image_assets/tests/: factories.py  mixins.py
src/image_assets/: __init__.py  admin.py  forms.py  models.py  signals.py  validators.py
src/image_assets/migrations/: 0001_initial.py  0002_models_localization.py  0003_auto_20200402_0915.py  0004_auto_20200402_0942.py  0005_assettype_formats.py  0006_migrate_formats.py  0007_auto_20200406_1313.py  0008_auto_20200528_0725.py
src/image_assets/tests/: factories.py  mixins.py
testproject/: settings.py
testproject/testapp/: tests.py
testproject/testapp/migrations/: 0001_initial.py
tests/testproject/: settings.py
tests/testproject/testapp/: admin.py  models.py  tests.py
tests/testproject/testapp/migrations/: 0001_initial.py
